# poc-aioresponses-real-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MIGRATING.md  README.md  poc.py  pyproject.toml  readme.md  renovate.json  test.py
.github/workflows/: pr.yml  publish.yml
aiointercept/: __init__.py  compat.py  core.py
aioresponses/: aioresponses.py  compat.py  core.py
tests/: conftest.py  test_aiointercept.py  test_aioresponse.py  test_aioresponses.py  test_compat.py
