[project]
name = "aiointercept"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Estevez",email = "pablo22estevez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yarl (>=1.23.0,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]


[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiointercept"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
tests = [
    "pytest (>=9.0.2,<10.0.0)",
    "ddt (>=1.7.2,<2.0.0)"
]
dev = [
    "ruff (>=0.15.9,<0.16.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.1.0",
]
