[project]
name = "aiointercept"
version = "0.1.0"
description = "aiohttp mock library that routes requests through a real test server"
authors = [
    {name = "Pablo Estevez",email = "pablo22estevez@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/Polandia94/aiointercept"
repository = "https://github.com/Polandia94/aiointercept"
requires-python = ">=3.10"
keywords = ["aiohttp", "mock", "testing", "pytest", "asyncio", "aioresponses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "yarl (>=1.23.0,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "multidict (>=6.0,<7.0)",
]

[project.urls]
Homepage = "https://github.com/Polandia94/aiointercept"
Repository = "https://github.com/Polandia94/aiointercept"
Issues = "https://github.com/Polandia94/aiointercept/issues"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiointercept"]
artifacts = ["aiointercept/py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
tests = [
    "pytest (>=9.0.2,<10.0.0)",
    "ddt (>=1.7.2,<2.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
dev = [
    "ruff (>=0.15.9,<0.16.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.1.0",
]
